samples/_failures_safe/1761422149_af4960_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9ba255d7.c: In function ‘get_matrix_input’:
./samples/SAFE/__tmp_9ba255d7.c:141:13: error: expected expression at end of input
  141 |             if (scanf("%d", &(*
      |             ^~
./samples/SAFE/__tmp_9ba255d7.c:141:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_9ba255d7.c:141:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_9ba255d7.c:141:13: error: expected declaration or statement at end of input
